--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,3 +2,5 @@
 @import './base/reset';
 @import './base/typography';
 @import './base/base';
+@import './components/auth-validation-errors';
+@import './components/form';
