--- a/resources/scss/base/_base.scss
+++ b/resources/scss/base/_base.scss
@@ -1,7 +1,20 @@
 body {
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     background-color: $backgroundColor;
+
+    main {
+        display: flex;
+    }
+
+    section {
+        margin: auto;
+    }
+
+    a {
+        display: inline-block;
+    }
+
+    .hidden {
+        display: none;
+    }
 }
