--- a/resources/scss/components/_auth-validation-errors.scss
+++ b/resources/scss/components/_auth-validation-errors.scss
@@ -4,11 +4,14 @@
 
     &__errors {
         width: 100%;
+        max-width: 100%;
         &__error {
             background-color: $invalidColor;
             color: $absoluteWhite;
             font-weight: 500;
             padding: .5rem 0;
+            font-size: .85rem;
+            letter-spacing: .1rem;
         }
     }
 }
