--- a/resources/scss/components/_form.scss
+++ b/resources/scss/components/_form.scss
@@ -15,6 +15,7 @@
         background-color: $absoluteWhite;
         border-radius: 10px;
         box-shadow: 0 2px 5px lighten(black, 80%);
+        margin: 0 auto;
 
         &__section {
             &__label,
@@ -67,6 +68,7 @@
             &__link {
                 margin: auto 0 auto auto;
                 font-size: .9rem;
+                text-decoration: underline;
                 transition: color .2s ease-out;
                     &:hover {
                         color: $activeBtnColor;
