personalizing blade views from breeze to match my project & to use Sass instead tailwind

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,4 +3,10 @@
 @import './base/typography';
 @import './base/base';
 @import './components/auth-validation-errors';
+@import './components/info';
 @import './components/form';
+// Font-Awesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
