repaired a display bug

--- a/resources/scss/base/_base.scss
+++ b/resources/scss/base/_base.scss
@@ -6,6 +6,10 @@ body {
         display: flex;
     }
 
+    .guest {
+        min-height: 100vh;
+    }
+
     .content {
         margin: auto;
     }
