--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,6 +5,7 @@
 @import './components/auth-validation-errors';
 @import './components/info';
 @import './components/form';
+@import './layouts/navigation';
 // Font-Awesome
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/regular";
