navigation bar on its way

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -83,6 +83,7 @@ body .auth-content {
 }
 body .container {
   margin: 0 auto;
+  width: 90%;
   max-width: 1600px;
 }
 body a {
@@ -207,7 +208,35 @@ body .hidden {
   background-color: #1f2937;
 }
 .navigation .container {
+  display: flex;
+  justify-content: space-between;
   padding: 1rem 0;
+}
+.navigation__logo {
+  margin: auto 0;
+}
+.navigation__dropdown-icon {
+  color: white;
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.dropdown-menu {
+  background-color: white;
+  overflow: hidden;
+  transition: height 0.2s ease-out;
+}
+.dropdown-menu__navlinks__elt {
+  border-bottom: 3px solid #f3f4f6;
+}
+.dropdown-menu__navlinks__elt__link {
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #1f2937;
+  font-size: 0.9rem;
+  padding: 0.75rem 0;
 }
 
 /*!
