--- a/resources/scss/layouts/_navigation.scss
+++ b/resources/scss/layouts/_navigation.scss
@@ -20,6 +20,19 @@
     }
 }
 
+.welcome-bar {
+    background-color: $validColor;
+    padding: .5rem 0;
+
+    &__message {
+        text-align: center;
+        color: $absoluteWhite;
+        font-size: .9rem;
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
 .dropdown-menu {
     background-color: $absoluteWhite;
     overflow: hidden;
@@ -28,13 +41,14 @@
     &__navlinks {
         &__elt {
             &__link {
-                display: block;
+                width: 100%;
                 text-align: center;
                 text-transform: uppercase;
                 font-weight: 500;
                 color: $cogipColor;
                 font-size: .9rem;
                 padding: .75rem 0;
+                cursor: pointer;
             }
             border-bottom: 3px solid $backgroundColor;
         }
