--- a/public/css/app.css
+++ b/public/css/app.css
@@ -203,6 +203,34 @@ body .hidden {
   background-color: #374151;
 }
 
+.company {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px #cccccc;
+  width: 250px;
+  margin: 1rem auto;
+  padding: 1.5rem;
+}
+.company__name {
+  font-size: 1.3rem;
+  font-weight: 700;
+  padding-bottom: 1rem;
+  position: relative;
+}
+.company__name::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: #1f2937;
+  left: 0;
+  bottom: 0;
+  border-radius: 5px;
+}
+.company__data-list__element {
+  padding-top: 0.75rem;
+}
+
 .navigation {
   display: flex;
   background-color: #1f2937;
