--- a/resources/scss/components/_data-card.scss
+++ b/resources/scss/components/_data-card.scss
@@ -1,4 +1,6 @@
-.company {
+.company,
+.contact,
+.invoices {
     background-color: $absoluteWhite;
     border-radius: 10px;
     box-shadow: 0 2px 5px lighten(black, 80%);
