--- a/resources/scss/components/_data-card.scss
+++ b/resources/scss/components/_data-card.scss
@@ -1,6 +1,6 @@
 .company,
 .contact,
-.invoices {
+.invoice {
     background-color: $absoluteWhite;
     border-radius: 10px;
     box-shadow: 0 2px 5px lighten(black, 80%);
