--- a/resources/scss/components/_data-card.scss
+++ b/resources/scss/components/_data-card.scss
@@ -21,6 +21,22 @@
             margin-right: .3rem;
         }
     }
+
+    &__links {
+        display: flex;
+        justify-content: center;
+
+        &__link {
+            margin: 0 .5rem;
+            color: $absoluteWhite;
+            text-transform: uppercase;
+            font-size: .95rem;
+            background-color: $cogipColor;
+            border-radius: 5px;
+            padding: .4rem;
+            box-shadow: 0 2px 5px lighten(black, 80%);
+        }
+    }
 }
 
 .company,
