--- a/resources/scss/components/_data-card.scss
+++ b/resources/scss/components/_data-card.scss
@@ -78,5 +78,22 @@
                 padding-bottom: .2rem;
             }
         }
+
+        &__links {
+            display: flex;
+            justify-content: center;
+            padding-top: 1.2rem;
+
+            &__link {
+                margin: 0 .5rem;
+                color: $absoluteWhite;
+                text-transform: uppercase;
+                font-size: .85rem;
+                background-color: $cogipColor;
+                border-radius: 5px;
+                padding: .4rem;
+                box-shadow: 0 2px 5px lighten(black, 80%);
+            }
+        }
     }
 }
