--- a/resources/scss/base/_base.scss
+++ b/resources/scss/base/_base.scss
@@ -28,6 +28,10 @@ body {
         display: inline-block;
     }
 
+    button {
+        cursor: pointer;
+    }
+
     .hidden {
         display: none;
     }
