--- a/resources/scss/components/_data-card.scss
+++ b/resources/scss/components/_data-card.scss
@@ -94,6 +94,10 @@
                 padding: .4rem;
                 box-shadow: 0 2px 5px lighten(black, 80%);
             }
+
+            .del {
+                background-color: $invalidColor;
+            }
         }
     }
 }
