--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,6 +6,7 @@
 @import './components/info';
 @import './components/form';
 @import './components/data-card';
+@import './components/edit-form';
 @import './layouts/navigation';
 // Font-Awesome
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
