--- a/resources/scss/components/_edit-form.scss
+++ b/resources/scss/components/_edit-form.scss
@@ -5,6 +5,49 @@
         box-shadow: 0 2px 5px lighten(black, 80%);
         width: 90%;
         margin: 1rem auto;
-        padding: 1.5rem;  
+        padding: 1.5rem;
+
+        &__heading {
+            font-size: 1.3rem;
+            font-weight: 700;
+            padding-bottom: 1rem;
+            margin-bottom: 1.75rem;
+            position: relative;
+            &::after {
+                position: absolute;
+                content: '';
+                width: 100%;
+                height: 5px;
+                background-color: $cogipColor;
+                left: 0;
+                bottom: 0;
+                border-radius: 5px;
+            }
+        }
+
+        &__input {
+            border: 1px solid lighten($activeNavLinkColor, 10%);
+            box-shadow: 0 1px 1px lighten(black, 90%);
+            padding: .75rem;
+            width: 100%;
+            margin-bottom: 1rem;
+            border-radius: 7px;
+        }
+
+        &__buttons {
+            display: flex;
+            justify-content: center;
+            padding-top: .4rem;
+            &__button {
+                margin: 0 .5rem;
+                color: $absoluteWhite;
+                text-transform: uppercase;
+                font-size: .85rem;
+                background-color: $cogipColor;
+                border-radius: 5px;
+                padding: .4rem;
+                box-shadow: 0 2px 5px lighten(black, 80%);
+            }
+        }
     }
 }
