constraints added to routes

--- a/resources/scss/base/_base.scss
+++ b/resources/scss/base/_base.scss
@@ -8,6 +8,10 @@ body {
         display: flex;
     }
 
+    .guest {
+        min-height: 100vh;
+    }
+
     .main {
         flex-direction: column;
     }
